--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>distributed-system</groupId>
-  <artifactId>webService</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>webService Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>distributed-system</groupId>
+	<artifactId>webService</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>webService Maven Webapp</name>
+	<url>http://maven.apache.org</url>
 	<properties>
 		<tomcat7.ip>localhost</tomcat7.ip> <!-- Default IP to which war is installed by tomcat7-maven-plugin -->
 		<tomcat7.port>8080</tomcat7.port>
@@ -19,33 +19,41 @@
 		<environment>main</environment>
 		<!-- command-line configurable finalName -->
 		<finalName>${project.artifactId}</finalName> <!-- ${project.artifactId}-${project.version} -->
-	</properties>  
-  
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
-   	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>1.7.12</version>
-	</dependency>
-	<dependency>
-		<groupId>ch.qos.logback</groupId>
-		<artifactId>logback-core</artifactId>
-		<version>1.1.3</version>
-	</dependency>
-	<dependency>
-		<groupId>ch.qos.logback</groupId>
-		<artifactId>logback-classic</artifactId>
-		<version>1.1.3</version>
-	</dependency>
-	
-	
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>distributed-system</groupId>
+			<artifactId>spark-hadoop-tool</artifactId>
+			<version>${project.version}</version>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -104,7 +112,7 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<version>${version.jackson}</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>com.wordnik</groupId>
 			<artifactId>swagger-annotations</artifactId>
@@ -138,15 +146,12 @@
 			<groupId>com.mangofactory</groupId>
 			<artifactId>swagger-springmvc</artifactId>
 			<version>0.9.5</version>
-		</dependency>		
-  </dependencies>
-  
-  
-  
-<!--   
-  <build>
-    <finalName>webService</finalName>
-  </build> -->
+		</dependency>
+	</dependencies>
+
+
+
+	<!-- <build> <finalName>webService</finalName> </build> -->
 	<build>
 		<finalName>${finalName}</finalName>
 
@@ -227,7 +232,8 @@
 						<resource>
 							<directory>src/${environment}/resources</directory>
 							<targetPath>WEB-INF/classes/</targetPath>
-							<!-- not overwritten so default file will be copied only if it does not exist already -->
+							<!-- not overwritten so default file will be copied only if it does 
+								not exist already -->
 							<includes>
 								<include>logback.xml</include>
 								<include>*.yaml</include>
@@ -328,7 +334,7 @@
 
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
 					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
@@ -373,5 +379,5 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-	</build>  
+	</build>
 </project>
